Listo el Swagger, y corrección en el router de productoOferta
