# src/routes/productoOfertaRoutes.ts
@@ -10,15 +10,15 @@ class ProductoOfertaRoutes {
 
     config(): void {
         this.router.get('/list', productoOfertaController.list);
-        this.router.get('/listOneByIdProductoOferta', productoOfertaController.listOneByIdProductoOferta);
-        this.router.get('/listIdProducto', productoOfertaController.listIdProducto);
+        this.router.get('/listOneByIdProductoOferta/:id_producto/:id_oferta', productoOfertaController.listOneByIdProductoOferta);
+        this.router.get('/listIdProducto/', productoOfertaController.listIdProducto);
         this.router.get('/listPorOferta/:id_oferta', productoOfertaController.listPorOferta);
         this.router.get('/idproductosdeOfertasActivas/', productoOfertaController.idproductosdeOfertasActivas);
         this.router.get('/listPorProducto/:id_producto', productoOfertaController.listPorProducto);
         this.router.post('/create', productoOfertaController.create);
         this.router.put('/update/:id_producto/:id_oferta', productoOfertaController.update);
         this.router.delete('/delete', productoOfertaController.delete);
-        this.router.put('/anularOferta',productoOfertaController.anularOferta);
+        this.router.put('/anularOferta',productoOfertaController.anularOferta);//  //
     }
 }
 
